# cppa-weblate-plugin

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  REUSE.toml  pyproject.toml  settings-override.py
.benchmarks/Linux-CPython-3.14-64bit/: 0001_baseline.json
.github/: README.md  WORKFLOWS.md  dependabot.yml
.github/ci/: apt-install
.github/workflows/: build-and-check.yml  cd.yml  ci-benchmark.yml  ci-combination-auth.yml  ci-combination-functional.yml  ci-combination-smoke.yml  ci-dependencies.yml  ci-lint.yml  ci-package.yml  ci-plugin-auth.yml  ci-plugin-functional.yml  ci-plugin-smoke.yml  ci-test.yml  ci-weblate-pin.yml  ci.yml  dep-audit.yml  integration-auth.yml  integration-functional.yml  integration-smoke.yml  lint-and-format.yml  promote-main.yml  release.yml  weblate-pin-bump.yml
docker/: Dockerfile.weblate-plugin  README.md  docker-compose.cd.yml  docker-compose.ci.yml  docker-compose.yml
docs/: boost-endpoint-api.md  boost-weblate-plugin-refactor-plan.md  deployment-runbook.md  plugin-http-routes.md  quickbook-grammar.md
scripts/: README.md  bump-weblate-version.sh  check-weblate-internal-contract.sh  check-weblate-pin-sync.sh  generate_settings_override.py  integration-auth.sh  integration-functional.sh  integration-smoke.sh  plugin-auth.sh  plugin-functional.sh  plugin-smoke.sh  weblate-version-map.sh
scripts/lib/: compose.sh  weblate-stack.sh
src/boost_weblate/: __init__.py  settings-override.py  settings_override.py
src/boost_weblate/endpoint/: __init__.py  apps.py  errors.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py  weblate_urls_adapter.py
src/boost_weblate/formats/: __init__.py  quickbook.py  registry.py
src/boost_weblate/utils/: __init__.py  quickbook.py  task_lock.py
tests/: __init__.py  conftest.py  django_qbk_format_settings.py  test_boost_plugin_urls.py  test_settings_override.py  test_weblate_internal_contract.py
tests/endpoint/: __init__.py  test_apps.py  test_errors.py  test_serializers.py  test_services.py  test_validators.py  test_views.py  test_weblate_urls_adapter.py
tests/fixtures/: asciidoc_fixture.adoc  quickbook_fixture.qbk
tests/formats/: test_quickbook.py  test_registry.py
tests/integration/: conftest.py  test_auth.py  test_functional.py  test_rate_limit.py  test_smoke.py
tests/integration/lib/: __init__.py  docker_exec.py  gh_repo.py  http.py  weblate_api.py
tests/plugin/: conftest.py  test_auth.py  test_functional.py  test_rate_limit.py  test_smoke.py
tests/plugin/lib/: __init__.py  gh_repo.py  http.py  weblate_api.py
tests/utils/: __init__.py  test_quickbook.py
