# SPDX-FileCopyrightText: 2026 Andrew Zhang <whisper67265@outlook.com>
#
# SPDX-License-Identifier: BSL-1.0

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.18,<0.12.0"]

[dependency-groups]
dev = [
  "coverage[toml]>=7.6.0",
  "pytest-cov>=7.1.0"
]
lint = [
  {include-group = "pre-commit"}
]
pre-commit = [
  "prek==0.3.13",
  "pytest>=8.3"
]
tooling = [
  {include-group = "lint"}
]

[project]
authors = [
  {name = "Andrew Zhang", email = "whisper67265@outlook.com"}
]
classifiers = [
  "Environment :: Web Environment",
  "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization"
]
dependencies = [
  "Weblate[all]==5.17.1"
]
description = "Standalone Weblate plugin for Boost documentation translation."
keywords = [
  "boost",
  "gettext",
  "i18n",
  "l10n",
  "quickbook",
  "translation",
  "weblate"
]
license = "BSL-1.0"
license-files = ["LICENSE"]
name = "cppa-weblate-plugin"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6.0",
  "prek==0.3.13",
  "pytest-cov>=7.1.0",
  "pytest>=8.3"
]

[project.urls]
Homepage = "https://github.com/cppalliance/cppa-weblate-plugin"
Issues = "https://github.com/cppalliance/cppa-weblate-plugin/issues"
Repository = "https://github.com/cppalliance/cppa-weblate-plugin"

[tool.check-manifest]
ignore = [
  "*.yaml",
  "*.yml",
  ".editorconfig"
]

[tool.coverage]

[tool.coverage.report]
fail_under = 90
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/__pycache__/*"
]
show_missing = true

[tool.coverage.run]
source = ["boost_weblate"]

# liccheck: regex on PyPI license classifiers (as_regex).
[tool.liccheck]
as_regex = true
authorized_licenses = [
  "mit",
  "apache",
  "bsd",
  "isc",
  "bsl",
  "boost",
  "business source",
  "python software foundation",
  "psf",
  "gnu general public",
  "\\bgpl\\b",
  "affero",
  "lesser gnu",
  "lgpl",
  "european union public",
  "\\beupl\\b",
  "agpl",
  "mozilla",
  "unlicense",
  "ofl",
  "zpl"
]
# google-crc32c: PyPI has no License/classifiers (liccheck UNKNOWN); upstream is Apache-2.0.
authorized_packages = {pyaskalono = ">=0.2.0", "google-crc32c" = ">=1.8.0"}
level = "cautious"
unauthorized_licenses = []

[tool.pytest.ini_options]
python_classes = ["Test*"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv.build-backend]
module-name = "boost_weblate"
module-root = "src"
source-include = [
  "docs/**",
  "LICENSES/**",
  "REUSE.toml",
  "uv.lock",
  "tests/**"
]
