# SPDX-FileCopyrightText: 2026 Andrew Zhang <whisper67265@outlook.com>
#
# SPDX-License-Identifier: BSL-1.0

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.19,<0.12.0"]

[dependency-groups]
dev = [
  "coverage[toml]==7.14.1",
  "hypothesis==6.155.3",
  "pytest-benchmark==5.2.3",
  "pytest-cov==7.1.0"
]
lint = [
  {include-group = "pre-commit"}
]
plugin = [
  "pytest==9.0.3",
  "pytest-rerunfailures==16.3",
  "pytest-timeout==2.4.0"
]
pre-commit = [
  "hypothesis==6.155.3",
  "prek==0.4.4",
  "pytest==9.0.3"
]
tooling = [
  {include-group = "lint"}
]

[project]
authors = [
  {name = "Andrew Zhang", email = "whisper67265@outlook.com"},
  {name = "William Jin", email = "AuraMindNest@outlook.com"}
]
classifiers = [
  "Environment :: Web Environment",
  "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization"
]
dependencies = [
  "Weblate[postgres]==2026.5"
]
description = "Standalone Weblate plugin for Boost documentation translation."
keywords = [
  "boost",
  "gettext",
  "i18n",
  "l10n",
  "quickbook",
  "translation",
  "weblate"
]
license = "BSL-1.0"
license-files = ["LICENSE"]
name = "cppa-weblate-plugin"
readme = "README.md"
requires-python = ">=3.12"
version = "1.0.0"

[project.optional-dependencies]
dev = [
  "coverage[toml]==7.14.1",
  "hypothesis==6.155.3",
  "prek==0.4.4",
  "pytest-cov==7.1.0",
  "pytest==9.0.3"
]

[project.urls]
Homepage = "https://github.com/cppalliance/cppa-weblate-plugin"
Issues = "https://github.com/cppalliance/cppa-weblate-plugin/issues"
Repository = "https://github.com/cppalliance/cppa-weblate-plugin"

[tool.check-manifest]
ignore = [
  "*.yaml",
  "*.yml",
  ".editorconfig",
  ".benchmarks/**"
]

[tool.coverage]

[tool.coverage.report]
fail_under = 90
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/__pycache__/*"
]
show_missing = true

[tool.coverage.run]
omit = []
source = ["boost_weblate"]

# liccheck: regex on PyPI license classifiers (as_regex).
[tool.liccheck]
as_regex = true
authorized_licenses = [
  "mit",
  "apache",
  "bsd",
  "isc",
  "bsl",
  "boost",
  "business source",
  "python software foundation",
  "psf",
  "gnu general public",
  "\\bgpl\\b",
  "affero",
  "lesser gnu",
  "lgpl",
  "european union public",
  "\\beupl\\b",
  "agpl",
  "mozilla",
  "unlicense",
  "ofl",
  "zpl"
]
# google-crc32c: PyPI has no License/classifiers (liccheck UNKNOWN); upstream is Apache-2.0.
authorized_packages = {pyaskalono = ">=0.2.0", "google-crc32c" = ">=1.8.0"}
level = "cautious"
unauthorized_licenses = []

[tool.pytest.ini_options]
addopts = ["-m", "not plugin and not benchmark and not fuzz and not weblate_contract"]
markers = [
  "benchmark: parser performance benchmarks (slow; excluded from default test runs)",
  "plugin: requires live Weblate stack (Docker Compose) and optional WEBLATE_API_TOKEN",
  "slow: long-running plugin integration test",
  "fuzz: property-based / fuzz tests (excluded from default test runs; pytest -m fuzz)",
  "weblate_contract: verifies undocumented Weblate internal APIs (pin-bump gate only)"
]
python_classes = ["Test*"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.pytest-benchmark]
min_rounds = 5
warmup = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv.build-backend]
module-name = "boost_weblate"
module-root = "src"
source-include = [
  ".env.example",
  "CHANGELOG.md",
  "docker/**",
  "docs/**",
  "LICENSES/**",
  "REUSE.toml",
  "scripts/**",
  "uv.lock",
  "tests/**"
]
